tests/should_succeed/generic_bug_with_substituting_T_to_T.jou
# This is a test for https://github.com/Akuli/jou/issues/814

@public
class Foo[T]:
    def grow(self) -> None:
        pass

    def extend(self, other: Foo[T]) -> None:
        pass


def main() -> int:
    a = Foo[int]{}
    b = Foo[int]{}
    a.extend(b)
    return 0
