tests/syntax_error/generic_missing_comma_use.jou
class Foo[T1, T2]:
    pass

def foo() -> None:
    f: Foo[int int]  # Error: expected a ']', got the 'int' keyword
